--- a/assets/css/top-header.css
+++ b/assets/css/top-header.css
@@ -106,7 +106,8 @@ select option,
 
 /* Placeholder styling */
 input::placeholder {
-    color: #666666;
+    color: #666;
+    font-style: italic;
     font-weight: 400;
 }
 
