--- a/assets/css/scheme-popup.css
+++ b/assets/css/scheme-popup.css
@@ -188,7 +188,7 @@ body {
 .cell-textarea {
     resize: vertical;
     min-height: 60px;
-    text-align: left;
+    text-align: center;
     vertical-align: top;
     padding: 8px 10px;
 }
@@ -383,6 +383,7 @@ input[type="checkbox"].schedule-checkbox {
 .form-group textarea {
     resize: vertical;
     min-height: 80px;
+    text-align: center;
 }
 
 .form-group input:focus,
